<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:id="@+id/tvChooseLanguage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_language"
            android:textSize="22sp"
            android:layout_marginBottom="20dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnKannada"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lang_kannada" />

        <Button
            android:id="@+id/btnHindi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lang_hindi" />

        <Button
            android:id="@+id/btnTelugu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lang_telugu" />

        <Button
            android:id="@+id/btnTamil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lang_tamil" />

        <Button
            android:id="@+id/btnMalayalam"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lang_malayalam" />

        <Button
            android:id="@+id/btnEnglish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lang_english" />
    </LinearLayout>
</ScrollView>
