<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="10dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#f1f1f1"
    android:layout_marginBottom="8dp">

    <TextView
        android:id="@+id/customerName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ui_customer_name"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/orderDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ui_order_details" />

    <TextView
        android:id="@+id/currentStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ui_status_pending" />

    <Spinner
        android:id="@+id/statusSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/order_status_options" />

    <Button
        android:id="@+id/updateStatusBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ui_update_status_2" />
</LinearLayout>
