<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="12dp">

    <TextView
        android:id="@+id/text_item_name"
        android:layout_width="0dp"
        android:layout_weight="2"
        android:layout_height="wrap_content"
        android:text="@string/ui_item_name_3"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/text_item_quantity"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/ui_qty_2"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/text_item_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ui_s_4000"
        android:textSize="16sp"
        android:textStyle="bold" />
</LinearLayout>
